Fixed header text on small res

--- a/src/components/bio.module.css
+++ b/src/components/bio.module.css
@@ -1,7 +1,6 @@
 .bio {
-    max-width: 700px;
+    max-width: 725px;
     margin: 20px auto 0;
-    font-size: 1.25em;
     display: flex;
     align-items: center
 }
@@ -10,11 +9,20 @@
     margin-right: 20px;
 }
 
-.headline {
+.bio, .headline {
     font-size: 1.25em;
+}
+
+.headline {
     margin: 0;
 }
 
 .avatar {
 
+}
+
+@media screen and (max-width: 800px)  {
+    .bio, .headline {
+        font-size: 1.15em;
+    }
 }
